# new-version-fs-for-arceos

./: Cargo.toml
apps/fs/hellofs/: Cargo.toml
apps/fs/hellofs/src/: main.rs
crates/axfs_xv6fs/: Cargo.toml  README.md
crates/axfs_xv6fs/src/: dir.rs  file.rs  lib.rs
modules/axfs/: Cargo.toml
modules/axfs/src/: fops.rs  lib.rs  root.rs  sleeplock_shim.rs
modules/axfs/src/api/: mod.rs
modules/axfs/src/fs/: axxv6fs.rs  mod.rs
